--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "linkedin2md"
 version = "0.2.0"
 description = "Convert LinkedIn data exports to Markdown"
 readme = "README.md"
-license = { text = "MIT" }
+license = { text = "GPL-2.0" }
 authors = [{ name = "Juan Manuel Daza", email = "juanmanueldaza@gmail.com" }]
 requires-python = ">=3.13"
 keywords = ["linkedin", "markdown", "export", "cv", "resume", "parser"]
@@ -12,7 +12,7 @@ classifiers = [
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: End Users/Desktop",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.13",
